# falco-cli

./: .all-contributorsrc  .buildinfo  .editorconfig  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  CNAME  CODE_OF_CONDUCT.md  LICENSE  README.md  all-contributorsrc  bump.sh  changelog.html  codeofconduct.html  contributing.html  genindex.html  index.html  install.html  justfile  keep_readme_up_to_date.py  license.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js
.doctrees/: changelog.doctree  codeofconduct.doctree  contributing.doctree  environment.pickle  index.doctree  install.doctree  license.doctree
.doctrees/guides/: avoiding_god_models.doctree  database_tips.doctree  deployment.doctree  dynamic_model_schema.doctree  index.doctree  interactive_user_interfaces.doctree  logging_and_monitoring.doctree  multitenancy.doctree  optimizing_database_access.doctree  permissions_and_authorization.doctree  realtime.doctree  running_project_in_a_container.doctree  task_queues_and_schedulers.doctree  tips_and_extra.doctree  use_sqlite_in_production.doctree  writing_async_code.doctree  writing_documentation.doctree  writing_tests.doctree
.doctrees/the_cli/: crud.doctree  htmx.doctree  index.doctree  migrations.doctree  start_app.doctree  sync_dotenv.doctree  usage.doctree  work.doctree
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml  documentation.yml  pre-commit-auto-update.yml  publish.yml
_sources/guides/: avoiding_god_models.rst.txt  database_tips.rst.txt  index.rst.txt  logging_and_monitoring.rst.txt  optimizing_database_access.rst.txt  permissions_and_authorization.rst.txt  realtime.rst.txt  task_queues_and_schedulers.rst.txt  tips_and_extra.rst.txt  writing_async_code.rst.txt
_sources/the_cli/: crud.rst.txt  start_app.rst.txt  sync_dotenv.rst.txt
_static/: custom.css
demo/: pyproject.toml  requirements.txt
demo/config/: settings.py  urls.py
demo/core/: utils.py
demo/demo/: asgi.py  settings.py  urls.py  wsgi.py
demo/demo/core/: apps.py  types.py  utils.py
demo/demo/orders/: apps.py  models.py
demo/demo/orders/migrations/: 0001_initial.py  0002_order_created.py  0003_order_completed_order_image_order_receipt.py  0004_alter_order_completed.py
demo/demo/products/: apps.py  forms.py  models.py  views.py
demo/demo/products/migrations/: 0001_initial.py
demo/demo/users/: apps.py
demo/demo/users/migrations/: 0001_initial.py
demo/orders/: apps.py  models.py
demo/orders/migrations/: 0001_initial.py  0002_remove_order_created_at_remove_order_updated_at.py
demo/products/: admin.py  forms.py  models.py  urls.py  views.py
demo/products/migrations/: 0001_initial.py  0002_category.py  0003_remove_product_slug_alter_product_name.py
demo/templates/: base.html
demo/templates/products/: product_create.html  product_detail.html  product_list.html  product_update.html
docs/: .rich-codex.yml  changelog.rst  codeofconduct.rst  conf.py  contributing.rst  index.rst  install.rst  license.rst  models.rst  pagination.rst  requirements.txt  tips_and_extra.rst  urls.rst  views.rst
docs/_static/: add-og-title-to-home.js  custom.css  tree-1.txt  tree-2.txt  tree-3.txt
docs/commands/: copy_template.rst  crud.rst  htmx.rst  htmx_ext.rst  index.rst  list_templates.rst  reset_migrations.rst  rm_migrations.rst  start_app.rst  work.rst
docs/guides/: avoiding_god_models.rst  database_tips.rst  deployment.rst  dynamic_model_schema.rst  index.rst  interactive_user_experience_with_htmx.rst  interactive_user_interfaces.rst  logging_and_monitoring.rst  multitenancy.rst  native_mobile_app.rst  optimizing_database_access.rst  permissions_and_authorization.rst  plugin_system.rst  realtime.rst  running_project_in_a_container.rst  task_queues_and_schedulers.rst  tips_and_extra.rst  use_sqlite_in_production.rst  writing_async_code.rst  writing_documentation.rst  writing_tests.rst  writting_async_code.rst
docs/images/: tree-1.txt  tree.txt  tree.txtt
docs/the_cli/: crud.rst  htmx.rst  index.rst  make_superuser.rst  migrations.rst  rm_migrations.rst  setup_admin.rst  (+5 more)
dotfm/: .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  README.md  justfile  manage.py  playground.ipynb  pyproject.toml
guides/: avoiding_god_models.html  database_tips.html  deployment.html  dynamic_model_schema.html  index.html  interactive_user_interfaces.html  logging_and_monitoring.html  multitenancy.html  optimizing_database_access.html  permissions_and_authorization.html  realtime.html  running_project_in_a_container.html  task_queues_and_schedulers.html  tips_and_extra.html  use_sqlite_in_production.html  writing_async_code.html  writing_documentation.html  writing_tests.html
requirements/: requirements-docs.txt
scripts/: make_blueprints_from_demo.py  project_tree.py  tree.py  update_readme_guides.py
src/falco_blueprints/project_name/: .pre-commit-config.yaml  README.md  pyproject.toml
src/falco_blueprints/project_name/.github/workflows/: ci.yml
src/falco_blueprints/project_name/config/: settings.py
src/falco_blueprints/project_name/deploy/: entrypoint.sh
src/falco_blueprints/project_name/docker/: Dockerfile  entrypoint.sh
src/falco_blueprints/project_name/project_name/core/: apps.py
src/falco_blueprints/project_name/project_name/static/vendors/htmx/: htmx.min.js
src/falco_blueprints/project_name/project_name/templates/: base.html  home.html
src/falco_blueprints/project_name/project_name/users/: apps.py  forms.py  models.py
src/falco_blueprints/project_name/project_name/users/migrations/: 0001_initial.py
src/falco_blueprints/project_name/tests/: test_assert_true.py
src/falco_templates/project_name/: .env.template  manage.py  playground.ipynb  pyproject.toml
src/falco_templates/project_name/project_name/core/management/commands/: makesuperuser.py
src/falco_templates/project_name/project_name/users/migrations/: 0001_initial.py
tests/: conftest.py  utils.py
the_cli/: crud.html  htmx.html  index.html  migrations.html  start_app.html  sync_dotenv.html  usage.html  work.html
(+218 files in other folders)
